add first config

--- a/marmite.yaml
+++ b/marmite.yaml
@@ -1,13 +1,15 @@
-name: Your Blog
-tagline: Things you talk about
-url: https://YOURUSER.github.io/blog
+name: Cipher Demo
+tagline: Proverbs 2:6
+url: https://YOURUSER.github.io/blogs
 menu:
   - ["About", "about.html"]
   - ["Pages", "pages.html"]
   - ["Tags", "tags.html"]
-  - ["Follow me", "https://mastodon.social/@YOURUSER"]
-  - ["Github", "https://github.com/rochacbruno/marmite"]
+  - [
+      "Follow me",
+      "https://www.linkedin.com/in/gabriel-eduardo-santoro-de-araujo-a06308262/",
+    ]
+  - ["Github", "http://github.com/gabr-edrdo"]
 
-
-# More options available to customize the website
-# read on https://rochacbruno.github.io/marmite/tag/customization.html
+search:
+  enable: true
