try github theme

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,7 +29,7 @@ jobs:
         run: cargo install marmite
 
       - name: Build site 🏗️
-        run: marmite . site --debug
+        run: marmite . site --colorscheme github --debug 
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
