post Surviving the AI Revolution as a Junior Developer

--- a/marmite.yaml
+++ b/marmite.yaml
@@ -1,5 +1,5 @@
 name: Cipher Demo
-tagline: Proverbs 2:6
+tagline: Ctrl+Alt+MyTake <br> <small>easy peasy lemon squeezy</small>
 url: https://YOURUSER.github.io/blog
 menu:
   - ["About", "about.html"]
