Add CNAME for custom domain

--- a/marmite.yaml
+++ b/marmite.yaml
@@ -1,6 +1,6 @@
 name: Cipher Demo
 tagline: Ctrl+Alt+MyTake <br> <small>easy peasy lemon squeezy</small>
-url: https://YOURUSER.github.io/blog
+url: www.gabredrdo.dev.br
 menu:
   - ["About", "about.html"]
   - ["Pages", "pages.html"]
